# tbc-tools

./: .gitignore  AGENTS.md  CMakeLists.txt  DEV_NOTES.md  README.md  flake.nix  log_note_export_metadata_passthrough_fixed_2026-02-28.md  log_note_icons_metadata_dialog_fixed_2026-02-27.md  log_note_metadata_converter_gui_default_fixed_2026-02-28.md  log_note_metadata_fixed_2026-02-27.md  log_note_video_parameters_fixed_2026-03-01.md  metadata_improvements_readme.md  prompt readme.md  prompt_readme.md  vcpkg.json
.github/workflows/: build_linux_tools.yml  build_macos_tools.yml  build_windows_tools.yml  prepare_release.yml  release.yml  tests.yml
ci/: check_ci_contracts.py  run_local_ci_parity.sh  verify_linux_bundle.sh
ci/tests/: test_check_ci_contracts.py
development-logs/: log_note_lds_converter_stop_cancel_fixed_2026-06-26.md  prompt_readme.md
docs/How-to-guides/: Creating-video-from-PAL-decodes.md  Working-with-subtitles.md
docs/Tools/: .pages  ld-analyse.md  ld-chroma-decoder.md  ld-export-metadata.md  ld-lds-converter.md  tbc-export-metadata.md
scripts/: test-decode-pretbc  test-teletext-export  test-video-export-runtime.py
scripts/release/: generate_release_notes.py
src/ac3-decoder/: CMakeLists.txt  main.cpp
src/ac3-decoder/ac3rf-lib/: README.vendor
src/ac3-decoder/ac3rf-lib/ac3/: Ac3BlockHandler.cpp  Ac3InputFraming.cpp
src/ac3-decoder/ac3rf-lib/rs/: ReedSolomon.h
src/audio-align/: CMakeLists.txt  audioalignmentdialog.cpp  audioalignmentdialog.h  audioalignmentdialog.ui  audioalignmentutil.cpp  audioalignmentutil.h  main.cpp  testaudioalignmentruntime.cpp
src/efm-decoder/tools/efm-decoder-audio/src/: efm_processor.cpp
src/efm-decoder/tools/efm-decoder-data/src/: efm_processor.cpp
src/efm-decoder/tools/efm-decoder-data/src/decoders/: dec_data24torawsector.cpp  dec_sectorcorrection.cpp
src/ld-analyse/: CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.ui  amplitude_conversion.h  chromadecoderconfigdialog.cpp  chromadecoderconfigdialog.h  chromadecoderconfigdialog.ui  configuration.cpp  configuration.h  cvbs_signal_constants.h  efmhandler-main.cpp  efmhandlerdialog.cpp  efmhandlerdialog.h  exportarguments.cpp  exportarguments.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  exportreadoutdialog.cpp  exportreadoutdialog.h  exportreadoutdialog.ui  fieldtimingdialog.cpp  fieldtimingdialog.h  fieldtimingwidget.cpp  fieldtimingwidget.h  ld-analyse-resources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadataconversiondialog.cpp  metadataconversiondialog.h  metadataconversiondialog.ui  metadataconverterutil.cpp  metadataconverterutil.h  metadatastatusdialog.cpp  metadatastatusdialog.h  metadatastatusdialog.ui  oscilloscopedialog.cpp  (+22 more)
src/ld-analyse/Graphics/: appicon.icns
src/ld-analyse/testdata/: snr_fixer_invalid_bsnr_100_500.json
src/ld-analyse/testexportarguments/: testexportarguments.cpp
src/ld-chroma-decoder/: CMakeLists.txt  README.md  chroma_net.onnx  comb.cpp  comb.h  decoderpool.cpp  main.cpp  monodecoder.cpp  nnTransform3D_kernel.cu  outputwriter.cpp  outputwriter.h  palcolour.cpp  transformpal3d.cpp  transformpal3d.h
src/ld-dropout-correct/: main.cpp
src/ld-export-metadata/: CMakeLists.txt  README.md  ffmetadata.cpp  ffmetadata.h  main.cpp  metadataexportdialog.cpp  metadataexportdialog.h  vitcffmetadata.cpp  vitcffmetadata.h
src/ld-lds-converter/: CMakeLists.txt  README.md  converterdialog.cpp  converterdialog.h  converterdialog.ui  dataconverter.cpp  dataconverter.h  main.cpp
src/ld-process-vbi/: CMakeLists.txt  closedcaption.cpp  teletextintegration.cpp
src/metadata-converter/: CMakeLists.txt  README.md  jsonconverter.cpp  jsonconverter.h  lddecodemetadata.cpp  lddecodemetadata.h  main.cpp  metadataconversiondialog.cpp  metadataconversiondialog.h  metadataconversiondialog.ui  metadataconverterutil.cpp  metadataconverterutil.h
src/tbc-export-metadata/: CMakeLists.txt  README.md  audacity.cpp  audacity.h  closedcaptions.cpp  closedcaptions.h  csv.cpp  csv.h  exportmetadata.cpp  ffmetadata.cpp  ffmetadata.h  main.cpp  metadataconverter.cpp  metadataconverter.h  metadataexportdialog.cpp  metadataexportdialog.h  metadataexportdialog.ui  vitcffmetadata.cpp  vitcffmetadata.h
src/tbc-metadata-converter/: CMakeLists.txt  README.md  jsonconverter.cpp  lddecodemetadata.cpp  main.cpp  metadataconversiondialog.cpp  metadataconversiondialog.h  metadataconverterutil.cpp  metadataconverterutil.h  testmetadataconverterutil.cpp
src/tbc-video-export/: CMakeLists.txt  tbc-video-export  tbc-video-export.in
src/tbc-video-export/pyinstaller/: build_linux.py  build_macos.py  requirements-build-linux.txt  requirements-build-windows.txt
src/tbc-video-export/src/tbc_video_export/: program_state.py
src/tbc-video-export/src/tbc_video_export/common/: consts.py  enums.py  tbc_json_helper.py
src/tbc-video-export/src/tbc_video_export/opts/: opt_validators.py  opts.py  opts_ldtools.py
src/tbc-video-export/src/tbc_video_export/process/parser/: parser_ld_export_metadata.py
src/tbc-video-export/src/tbc_video_export/process/wrapper/: wrapper_ffmpeg.py  wrapper_ld_chroma_decoder.py  wrapper_ld_dropout_correct.py  wrapper_ld_export_metadata.py
src/tbc-video-export/tests/: test_output.py  test_tbc_json.py  test_wrappers_ffmpeg.py  test_wrappers_ldtools.py
src/tbc-video-export/tests/files/: mesecam_composite.tbc.json  secam_composite.tbc.json
test-data/ntsc/: ve-snw-cut.tbc.json
testout/dropout-verify/: issue176-advanced-verify-20260507072512.tbc  issue176-basic-verify-20260507072459.dropout.db  issue176-basic-verify-20260507072459.tbc
